[project]
name = "llm-sdk-tests"
version = "0.1.0"
description = "Tests that use LLM SDKs to hit the mock `/llm` APIs to verify compliance"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "openai>=2.14.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP035", "TID253", "PLC0415"]
